syntax = "proto3";

package payments;

//The Payment service definition
service Payments {
    rpc Options(OptionsRequest) returns (OptionsResponse) {}
    rpc DeleteCard(DeleteCardRequest) returns (DeleteCardResponse) {}
    rpc Checkout(CheckoutRequest) returns (CheckoutResponse) {}
}

message OptionsRequest {
    string segment = 1;
    string msisdn = 2;
    string billType = 3;
    string username = 4;
    string email = 5;
}

message OptionsResponse {
    bool vaulted = 1;
    repeated string availablePaymentOptions = 2;
    repeated Card cards = 3;
    repeated int32 topupOptions = 4;
}

message Card {
    string panLast4 = 1;
    string type = 2;
    string extToken = 3;
}

message DeleteCardRequest {
    string panLast4 = 1;
    string type = 2;
}

message DeleteCardResponse {
    string deletionResult = 1;
}

message CheckoutRequest {
    string orderDesc = 1;
    string segmentType = 2;
    string actionType = 3;
    string msisdn = 4;
    int32 orderAmount = 5;
    string extToken = 6;
    string additionalProperties = 7;
}

message CheckoutResponse {
    string orderId = 1;
    string status = 2;
    int32 orderAmount = 3;
    string currency = 4;
    int32 paymentTotal = 5;
    string txId = 6;
    string paymentRef = 7;
    string description = 8;
}